--- a/GoogleBookAPI/GoogleBookAPI/Base.lproj/Main.storyboard
+++ b/GoogleBookAPI/GoogleBookAPI/Base.lproj/Main.storyboard
@@ -3,37 +3,49 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
         <scene sceneID="Yw3-WM-fTJ">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Her-2s-CVF" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="R6Y-DB-iai" customClass="BookTableViewController" customModule="GoogleBookAPI" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="5tv-i4-lkQ">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="210" sectionHeaderHeight="28" sectionFooterHeight="28" id="5tv-i4-lkQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="bookCell" rowHeight="200" id="Hxd-tg-UFh" customClass="BookTableViewCell" customModule="GoogleBookAPI" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="375" height="200"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="bookCell" rowHeight="210" id="Hxd-tg-UFh" customClass="BookTableViewCell" customModule="GoogleBookAPI" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="375" height="210"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hxd-tg-UFh" id="Nd0-3V-Ftb">
-                                    <frame key="frameInset" width="375" height="199"/>
+                                    <frame key="frameInset" width="375" height="209"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YL5-Wy-26h">
-                                            <frame key="frameInset" minX="136" minY="51" width="90" height="140"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YL5-Wy-26h">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="81" id="NFB-gA-Ue0"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q8K-k4-Sdf">
-                                            <frame key="frameInset" minX="131" minY="15" width="101" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q8K-k4-Sdf">
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="EV1-6w-JG0"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="EuphemiaUCAS-Bold" family="Euphemia UCAS" pointSize="14"/>
-                                            <color key="textColor" red="0.55709134615384615" green="0.026056743022913765" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="textColor" red="0.8787259615384615" green="0.82800921972664898" blue="0.092482592048669501" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="YL5-Wy-26h" firstAttribute="leading" secondItem="Nd0-3V-Ftb" secondAttribute="leading" constant="137" id="18W-jM-p6q"/>
+                                        <constraint firstItem="q8K-k4-Sdf" firstAttribute="top" secondItem="Nd0-3V-Ftb" secondAttribute="topMargin" constant="7" id="YT0-19-uZh"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="YL5-Wy-26h" secondAttribute="bottom" constant="21" id="Z9j-Ec-kzj"/>
+                                        <constraint firstAttribute="trailing" secondItem="q8K-k4-Sdf" secondAttribute="trailing" id="cAW-BG-hRf"/>
+                                        <constraint firstItem="q8K-k4-Sdf" firstAttribute="leading" secondItem="Nd0-3V-Ftb" secondAttribute="leading" id="fAT-8t-7wr"/>
+                                        <constraint firstItem="YL5-Wy-26h" firstAttribute="top" secondItem="q8K-k4-Sdf" secondAttribute="bottom" constant="15" id="x2b-yU-Skn"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="bookThumbnail" destination="YL5-Wy-26h" id="o7y-Ly-7Zh"/>
@@ -48,13 +60,13 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="yHg-eT-Oh3"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Her-2s-CVF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="149.59999999999999" y="80.50974512743629"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pRm-Kv-wlg">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fIZ-ic-EFA" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="SbO-Xp-Uln" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Q6X-tH-JCm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -64,7 +76,6 @@
                         <segue destination="R6Y-DB-iai" kind="relationship" relationship="rootViewController" id="uaY-fy-odo"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fIZ-ic-EFA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-615" y="81"/>
         </scene>
