--- a/GoogleBookAPI/GoogleBookAPI/Base.lproj/Main.storyboard
+++ b/GoogleBookAPI/GoogleBookAPI/Base.lproj/Main.storyboard
@@ -101,29 +101,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ba8-nj-P9D">
-                                <rect key="frame" x="67" y="72" width="240" height="34.5"/>
+                                <rect key="frame" x="67" y="72" width="240" height="35"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ndV-fY-rOS">
-                                <rect key="frame" x="67" y="158" width="240" height="159"/>
+                                <rect key="frame" x="67" y="159" width="240" height="158"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Axu-2V-J1F">
-                                <rect key="frame" x="67" y="104" width="240" height="27.5"/>
+                                <rect key="frame" x="67" y="105" width="240" height="28"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="br9-OL-hGd">
+                                <rect key="frame" x="57" y="347" width="260" height="253"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.13934252952502713" green="0.89211933724832215" blue="0.75211381137059852" alpha="0.79997306034482762" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.70170486058898429" green="0.8359979511605391" blue="0.89211933724832215" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="br9-OL-hGd" firstAttribute="leading" secondItem="rK8-sI-DEB" secondAttribute="leadingMargin" constant="41" id="4mK-fh-7Hp"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Axu-2V-J1F" secondAttribute="trailing" constant="52" id="6cj-3s-TDL"/>
                             <constraint firstItem="ndV-fY-rOS" firstAttribute="top" secondItem="Axu-2V-J1F" secondAttribute="bottom" constant="26.5" id="8HN-5T-zGV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="br9-OL-hGd" secondAttribute="trailing" constant="42" id="9LM-z6-63x"/>
                             <constraint firstItem="ndV-fY-rOS" firstAttribute="leading" secondItem="rK8-sI-DEB" secondAttribute="leadingMargin" constant="51" id="JV7-B1-RT2"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ndV-fY-rOS" secondAttribute="trailing" constant="52" id="KQ5-ca-jtB"/>
+                            <constraint firstItem="br9-OL-hGd" firstAttribute="top" secondItem="ndV-fY-rOS" secondAttribute="bottom" constant="30" id="LME-iB-rb0"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ba8-nj-P9D" secondAttribute="trailing" constant="52" id="SWS-X8-8DF"/>
                             <constraint firstItem="Ba8-nj-P9D" firstAttribute="top" secondItem="0fg-rK-nj9" secondAttribute="bottom" constant="8" id="UHe-x5-Y6v"/>
+                            <constraint firstItem="iZV-9r-xkR" firstAttribute="top" secondItem="br9-OL-hGd" secondAttribute="bottom" constant="23" id="bm0-wk-5W0"/>
                             <constraint firstItem="Axu-2V-J1F" firstAttribute="top" secondItem="Ba8-nj-P9D" secondAttribute="bottom" constant="-2.5" id="bxD-WK-cto"/>
                             <constraint firstItem="Ba8-nj-P9D" firstAttribute="leading" secondItem="rK8-sI-DEB" secondAttribute="leadingMargin" constant="51" id="daE-Go-jr9"/>
                             <constraint firstItem="Axu-2V-J1F" firstAttribute="leading" secondItem="rK8-sI-DEB" secondAttribute="leadingMargin" constant="51" id="db8-0z-Xif"/>
@@ -135,6 +145,7 @@
                         <outlet property="bookAuthors" destination="Axu-2V-J1F" id="u7E-m6-eD9"/>
                         <outlet property="bookImage" destination="ndV-fY-rOS" id="I5X-6c-MYo"/>
                         <outlet property="bookTitle" destination="Ba8-nj-P9D" id="wLN-FK-gpc"/>
+                        <outlet property="descripLabel" destination="br9-OL-hGd" id="RJZ-MG-cnK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aWP-Oh-CwZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
