--- a/GoogleBookAPI/GoogleBookAPI/Base.lproj/Main.storyboard
+++ b/GoogleBookAPI/GoogleBookAPI/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Books-->
         <scene sceneID="Ixp-SS-CVL">
             <objects>
                 <tableViewController id="s1u-Ie-oi7" customClass="GooglebookTableViewController" customModule="GoogleBookAPI" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,7 +32,7 @@
                             <outlet property="delegate" destination="s1u-Ie-oi7" id="mSr-hs-kMN"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="B7i-iv-ddO"/>
+                    <navigationItem key="navigationItem" title="Books" id="B7i-iv-ddO"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wDj-2F-k7V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -53,17 +53,39 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sOj-Nx-o7I">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="GbR-au-Ris"/>
-                                    <constraint firstAttribute="height" constant="300" id="YAI-7K-UfY"/>
+                                    <constraint firstAttribute="height" constant="500" id="YAI-7K-UfY"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TQd-D0-QrM">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="pEO-hF-dsw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OF8-ki-0vE">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="b0I-nt-sf3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="TQd-D0-QrM" firstAttribute="top" secondItem="sOj-Nx-o7I" secondAttribute="bottom" constant="9" id="1lp-UQ-z6b"/>
                             <constraint firstItem="sOj-Nx-o7I" firstAttribute="centerY" secondItem="2Vz-SZ-I0j" secondAttribute="centerY" id="Db9-vS-cZp"/>
+                            <constraint firstItem="OF8-ki-0vE" firstAttribute="centerX" secondItem="2Vz-SZ-I0j" secondAttribute="centerX" id="HER-Q4-7aM"/>
+                            <constraint firstItem="OF8-ki-0vE" firstAttribute="top" secondItem="TQd-D0-QrM" secondAttribute="bottom" constant="8" id="I0U-UA-Xgs"/>
+                            <constraint firstItem="TQd-D0-QrM" firstAttribute="centerX" secondItem="2Vz-SZ-I0j" secondAttribute="centerX" id="JAk-1k-QOZ"/>
                             <constraint firstItem="sOj-Nx-o7I" firstAttribute="centerX" secondItem="2Vz-SZ-I0j" secondAttribute="centerX" id="mmn-8O-U5n"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="authorLabel" destination="OF8-ki-0vE" id="T4O-jf-vEO"/>
+                        <outlet property="bookLabel" destination="TQd-D0-QrM" id="tbc-eN-MOI"/>
                         <outlet property="thumbnailImage" destination="sOj-Nx-o7I" id="w80-HP-qYM"/>
                     </connections>
                 </viewController>
